# secure-linker

./: .gitignore  README.md  pyproject.toml
.codellm/rules/: reglas.mdc
src/secure_linker/app/: clean_expired.py  crud.py  generate_token.py  main.py  models.py
src/secure_linker/static/css/: styles.css
src/secure_linker/static/js/: index.js
src/secure_linker/templates/: index.html  preview.html
src/secure_linker/utils/: clean_expired_links.py
